[package]
name = "lsf_agent"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
links = "lsf"
build = "build.rs"

[dependencies]
derive-new = "=0.5.0"
error-chain = "=0.10.0"
libresolv-sys = "=0.1.0"
serde = "=1.0.11"
serde_derive = "=1.0.11"
serde_json = "=1.0.2"
structopt = "=0.1.0"
structopt-derive = "=0.1.0"
